--- a/frontend-podantiaffinity-host.yaml
+++ b/frontend-podantiaffinity-host.yaml
@@ -18,7 +18,7 @@ spec:
           - topologyKey: kubernetes.io/hostname
             labelSelector:
               matchLabels:
-                app: backend
+                app: frontend
       containers:
       - name: main
         image: busybox
