--- a/frontend-podantiaffinity-host.yaml
+++ b/frontend-podantiaffinity-host.yaml
@@ -15,7 +15,8 @@ spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
+          - topologyKey: kubernetes.io/hostname
+            labelSelector:
               matchLabels:
                 app: frontend
       containers:
